# nulab

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
apps/bcapp/: CMakeLists.txt  bc_client.c  bc_client.h  find_nonce.c  find_nonce.h  main_block_builder.c  main_block_dexor.c  main_block_solver.c  main_block_template_parser.c  main_client.c  tcp_client.c
apps/bclib/: CMakeLists.txt  bc_error.h  bc_hex.c  bc_hex.h  bc_json.c  bc_json.h  bc_merkle_root.c  bc_merkle_root.h  bc_message.h  bc_types.h  bc_utils.c  bc_utils.h  sha256.c  sha256.h  test_merkle_root.c  test_sha256.c
apps/btcp/: CMakeLists.txt  main_block_dexor.c  main_block_template_parser.c
apps/mine/: CMakeLists.txt  main.c  tcp_client.c  tcp_client.h
libs/nulib/: CMakeLists.txt
libs/nulib/include/nulib/: assert.h  buffer.h  dca.h  memory.h  preset.h  string.h
libs/nulib/src/: assert.c  dca.c  memory.c
tests/: CMakeLists.txt  dca.c  sanity_check.c  testsuite.h
